--- a/kippo-0.5+svn_all/DEBIAN/control
+++ b/kippo-0.5+svn_all/DEBIAN/control
@@ -4,7 +4,7 @@ Maintainer: Miguel Jacq <mig@mig5.net>
 Depends: python, python-twisted, python-crypto, python-mysqldb, adduser
 Homepage: http://code.google.com/p/kippo/
 Package: kippo
-Version: 0.5+svn20120602_r219
+Version: 0.5+svn20120602
 Architecture: all
 Description: Medium-interaction SSH honeypot.
  Kippo is a medium interaction SSH honeypot  written in Python, 
